<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:orientation="vertical"
    >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <LinearLayout
            android:id="@+id/layout1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:weightSum="6"
            android:background="@color/themeColor">

            <TextView
                android:id="@+id/name"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:textSize="20sp"
                android:textColor="#FFFF"

                />

            <TextView
                android:id="@+id/qttext"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginTop="10dp"
                android:textSize="20sp"
                android:textColor="#FFFF"
                android:text="@string/qty"
                android:textAlignment="textEnd"


                />

            <TextView
                android:id="@+id/orderqty"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textAlignment="center"
                />



        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:layout_marginTop="50dp"
            android:weightSum="9"
            android:background="@color/themeColor">

            <Button
                android:id="@+id/delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_weight="1"
                android:text="@string/delete"
                android:background="#cf3030"/>

            <TextView
                android:id="@+id/totalprice"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:layout_marginStart="150dp"
                android:layout_marginTop="10dp"
                android:textSize="20sp"
                android:textColor="#FFFF"
                android:textAlignment="center"
                />
            <TextView
                android:id="@+id/textprice"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:layout_marginTop="10dp"
                android:textSize="20sp"
                android:textColor="#FFFF"
                android:text="@string/currencysign"
                android:textAlignment="center"
                />






        </LinearLayout>




    </androidx.cardview.widget.CardView>




</RelativeLayout>